# allscale_compiler

./: .gitignore  .gitmodules  CMakeLists.txt  QUICKSTART  README.md  code  test
code/: CMakeLists.txt  allscale_integration_test_config.in
code/cba/: CMakeLists.txt
code/cba/haskell/: CMakeLists.txt  allscale-hat.cabal  stack.yaml
code/cba/haskell/src/Allscale/Analysis/: DataRequirements.hs  Dummy.hs  (+1 more)
code/cba/haskell/utils/: copyLib.hs
code/cba/include/allscale/cba/: dummy.h  out_of_bounds_analysis.h
code/cba/src/: dummy.cpp  out_of_bounds_analysis.cpp
code/cba/test/: out_of_bounds_analysis_test.cc
code/compiler/: CMakeLists.txt
code/compiler/include/allscale/compiler/: allscale_utils.h  config.h  env_vars.h
code/compiler/resources/report/: generate  report.in.html
code/compiler/resources/report/css/: bootstrap.min.css  custom.css  prism.css
code/compiler/resources/report/js/: prism.min.js  report.js
code/compiler/src/: allscale_integration_tests.cxx  allscale_utils.cpp  allscalecc.cxx
code/compiler/src/analysis/: data_item_access.cpp  data_requirement.cpp  diagnostics.cpp  out_of_bounds_analysis.cpp
code/compiler/src/analysis/allscale-hat/: .gitignore  CMakeLists.txt  allscale-hat.cabal  stack.yaml
code/compiler/src/backend/: allscale_backend.cpp  allscale_code_fragments.cpp  allscale_extension.cpp  allscale_operator.cpp  allscale_postprocessor.cpp  allscale_preprocessor.cpp  allscale_runtime_entities.cpp  allscale_type_handler.cpp
code/compiler/src/checks/: allscale_type_checks.cpp
code/compiler/src/core/: allscale_core.cpp  allscale_optimizations.cpp  cpp_lambda_to_ir_conversion.cpp  data_item_annotation.cpp  data_item_conversion.cpp  data_serialization.cpp  global_constant_propagation.cpp  prec_to_work_item_conversion.cpp
code/compiler/src/frontend/: allscale_fe_extension.cpp  allscale_fe_extension_di_processing.cpp  allscale_fe_extension_exprs.cpp  allscale_frontend.cpp
code/compiler/src/lang/: allscale_ir.cpp
code/compiler/src/reporting/: reporting.cpp
code/compiler/test/: test_utils.inc
code/compiler/test/analysis/: data_item_accesses_test.cc  data_requirement_input_test.cc  data_requirement_test.cc  diagnostics_test.cc  input_test.cc  out_of_bounds_analysis_test.cc
code/compiler/test/analysis/data_requirements_input_tests/: allscale_analysis.h  dummy_array_item.cpp  dummy_scalar_item.cpp  for_loop.cpp  io.cpp  local_data.cpp  parameter_struct.cpp  stencil_1d.cpp  while_loop.cpp
code/compiler/test/analysis/diagnostics_input_tests/: basic.cpp.diag  global_access.c  global_access.c.diag  global_access2.c  global_access2.c.diag  global_access3.c  global_access3.c.diag  local_access.c  semi_local_access.c  semi_local_access.c.diag  uncertain_access.c  uncertain_access.c.diag  unknown_reference_access.c  unknown_reference_access.c.diag
code/compiler/test/analysis/input_tests/: allscale_analysis.h  direct.cpp  dummy_array_item.cpp  dummy_scalar_item.cpp  empty.cpp  io.cpp  utils_static_grids.cpp  utils_vector.cpp
code/compiler/test/backend/: allscale_code_snippets_test.cc  allscale_entities_test.cc  allscale_extension.cc  test_utils.inc
code/compiler/test/checks/: allscale_checks_test.cc
code/compiler/test/core/: data_item_conversion_test.cc  data_serialization_test.cc  distributed_memeory_checks_test.cc
code/compiler/test/frontend/: allscale_fe_conversion_test.cc  allscale_fe_di_annotation_test.cc  allscale_fe_di_sema_conversion_test.cc  allscale_fe_test_utils.h
code/compiler/test/frontend/inputs/: allscale_basic.cpp  allscale_basic_non_trivial.cpp  allscale_ctor_init_exprs.cpp  allscale_dependency_ops.cpp  allscale_di_sema_api_static_grid.cpp  allscale_di_sema_nonbaserange.cpp  allscale_di_sema_simplest.cpp  allscale_di_sema_templated.cpp  allscale_di_sema_with_cleanups.cpp  allscale_fib.cpp  allscale_fun_ops.cpp  allscale_members.cpp  allscale_pfor.cpp  allscale_pick.cpp  allscale_prec_deps.cpp  allscale_prec_non_treeture_step.cpp  allscale_prec_variants.cpp  allscale_prec_void.cpp  allscale_treeture_ops.cpp  allscale_types_implicit_materialization.cpp  allscale_utils_vector.cpp
code/compiler/test/lang/: allscale_ir_test.cc
code/include/allscale/: name.h
code/include/allscale/compiler/: allscale_utils.h  config.h  utils.h
code/include/allscale/compiler/backend/: allscale_backend.h  allscale_code_fragments.h  allscale_extension.h  allscale_preprocessor.h  allscale_runtime_entities.h
code/include/allscale/compiler/checks/: allscale_checks.h  allscale_type_checks.h
code/include/allscale/compiler/frontend/: allscale_fe_extension.h  allscale_fe_extension_exprs.h  allscale_fe_extension_types.h  allscale_fe_utils.h  allscale_frontend.h  clang_expression_info.h
code/include/allscale/compiler/lang/: allscale_ir.h
code/include/allscale/core/: allscale_ir.h
code/src/: allscale_utils.cpp  allscalecc.cxx  name.cpp  utils.cpp
code/src/backend/: allscale_backend.cpp  allscale_code_fragments.cpp  allscale_operator.cpp  allscale_preprocessor.cpp  allscale_runtime_entities.cpp  allscale_type_handler.cpp
code/src/checks/: allscale_checks.cpp  allscale_type_checks.cpp
code/src/frontend/: allscale_fe_extension.cpp  allscale_fe_extension_exprs.cpp  allscale_fe_extension_types.cpp  allscale_fe_utils.cpp  allscale_frontend.cpp  clang_expression_info.cpp
code/src/lang/: allscale_ir.cpp
code/test/: basic.cc
code/test/backend/: allscale_code_snippets_test.cc  allscale_entities_test.cc  code_snippet.cc
code/test/checks/: allscale_checks_test.cc
code/test/core/: allscale_ir_test.cc
code/test/frontend/: allscale_fe_conversion_test.cc  allscale_fe_extension_test.cc  allscale_independent_test.cc  test_utils.inc
code/test/frontend/inputs/: allscale_basic.cpp  allscale_basic_non_trivial.cpp  allscale_ctor_init_exprs.cpp  allscale_dependency_ops.cpp  allscale_fib.cpp  allscale_fun_ops.cpp  allscale_pfor.cpp  allscale_pick.cpp  allscale_prec_variants.cpp  allscale_task_ref_ops.cpp  allscale_treeture_ops.cpp  allscale_types.cpp
code/test/lang/: allscale_ir_test.cc
runtime/: CMakeLists.txt  config.inc.in
(+301 files in other folders)
