name:               allscale-hat
version:            0.1
synopsis:           Analysis framework based on ideas from the book: Principles of Program Analysis.
license:            GPL-3
author:             Herbert Jordan <herbert@dps.uibk.ac.at>, Alex Hirsch <alex@dps.uibk.ac.at>
maintainer:         Herbert Jordan <herbert@dps.uibk.ac.at>
build-type:         Simple
cabal-version:      >= 1.10

library
    ghc-options:        -O2
                        -optc-O3
    hs-source-dirs:     src
    exposed-modules:    Allscale.Adapter,
                        Allscale.Analysis.Entities.DataRange,
                        Allscale.Analysis.DataItemElementReference,
                        Allscale.Analysis.DataRequirements,
                        Allscale.Analysis.Diagnostics,
                        Allscale.Analysis.OutOfBounds
    build-depends:      insieme-hat,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bytestring >= 0.10,
                        containers >= 0.5,
                        deepseq >= 1.4,
                        hashable >= 1.2.4,
                        lens >= 4.13,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4,
                        -- needed for utils/copyLib.hs
                        directory >= 1.2,
                        Glob >= 0.7
    include-dirs:       include,
                        ../../../../../core/include
    default-language:   Haskell2010
