name:               allscale-hat
version:            0.1
synopsis:           Analysis framework based on ideas from the book: Principles of Program Analysis.
license:            GPL-3
author:             Herbert Jordan <herbert@dps.uibk.ac.at>, Alex Hirsch <alex@dps.uibk.ac.at>
maintainer:         Herbert Jordan <herbert@dps.uibk.ac.at>
build-type:         Simple
cabal-version:      >= 1.10

library
    ghc-options:        -Wall -Wno-name-shadowing -Wno-type-defaults -Wno-unused-do-bind
                        -O2 -optc-O3
    hs-source-dirs:     src
    exposed-modules:    Allscale.Analysis.Entities.DataRange,
                        Allscale.Analysis.DataItemAccesses,
                        Allscale.Analysis.DataItemElementReference,
                        Allscale.Analysis.DataRequirements,
                        Allscale.Analysis.Diagnostics,
                        Allscale.Analysis.OutOfBounds
    build-depends:      insieme-hat,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bitwise >= 0.1,
                        bytestring >= 0.10,
                        containers >= 0.5,
                        deepseq >= 1.4,
                        hashable >= 1.2.4,
                        lens >= 4.13,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4,
                        unordered-containers
    default-language:   Haskell2010

foreign-library allscale-hat
    type:               native-shared
    if os(windows)
      options: standalone

    if flag(profiling)
      buildable: False

    hs-source-dirs:     src/,
                        ../../../../../insieme/code/analysis/src/cba/haskell/insieme-hat/flib
    other-modules:      Allscale.Adapter,
                        Insieme.Adapter
    build-depends:      allscale-hat,
                        insieme-hat,
                        attoparsec >= 0.13,
                        attoparsec-binary >= 0.2,
                        base >= 4.7,
                        bitwise >= 0.1,
                        bytestring >= 0.10,
                        containers >= 0.5,
                        deepseq >= 1.4,
                        hashable >= 1.2.4,
                        lens >= 4.13,
                        mtl >= 2.2,
                        pretty-show >= 1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >= 2.9,
                        transformers >= 0.4,
                        directory >= 1.3,
                        c-storable-deriving >= 0.1.3,
                        unordered-containers
    default-language:   Haskell2010

executable datareq
    if !flag(profiling)
      buildable: False

    main-is:            datareq.hs
    hs-source-dirs:     bin/
    build-depends:      insieme-hat
                      , allscale-hat
                      , base        >= 4.7
                      , bytestring  >= 0.10
                      , deepseq
                      , containers
    default-language:   Haskell2010

flag profiling
  description: Should be enabled manually when doing a profiling build
  default:     False
  manual:      True
